# QuantNet

./: CMakeLists.txt  README.md
src/: train_model.cpp
src/framework/: DataFramework.cpp  DataFramework.h
src/model/: HybridModel.cpp  HybridModel.h  LSTMCell.cpp  LSTMCell.h  LSTMNetwork.cpp  LSTMNetwork.h  MLP.cpp  MLP.h  activations.cpp  activations.h  linalg.cpp  linalg.h
